Revision history for Perl module group Pod::Perldoc
                                        Time-stamp: "2004-11-30 13:27:01 AST"
2008-04-16
	* Development release 3.14_04
	* 'lib' & co. are added to search path if -f Build.PL
	  in current directory (rt.cpan.org #33941)
        * bug fix: 'blib' directories were never searched 
	  because they were tested with -f
	
2007-09-03
	* Development release 3.14_03
	* typo fix (#31763 by rgs)
	* warning and debugging code added to add_translator()
	* the translators now became objects
	* POD2::Base (if available) provides language-specific
	  support for free
        * experimental releases, misses documentation of changes
	
2007-08-23
	* Development release 3.14_02
	* -L becomes more forgiving:
              $ perldoc -L it perldocpage
	  retrieves the standard (English) version if it cannot find
	  the Italian translation.
	* applied to bleed as Change #31762
	
2007-08-23
	* Release 3.14_01 -- bleedperl changes:
	+ #31628: a Gentoo patch
	+ #27878: warn when -f, -q ignore extra arguments
	+ #26202: document -L
	+ #26191: new switch -L
	
2004-11-30  Sean M. Burke  sburke@cpan.org
	* Release 3.14 -- bugfix for Cygwin

	* Matt Johnson sends in two patches to accomodate Cygwin.
	Accepted.

	* Also changing pathsep for IS_MSWin32 || IS_Dos temp files
	from '/' to '\'.

2004-04-09  Sean M. Burke  sburke@cpan.org
	* Release 3.13 -- minor bugfixes

	Ken Willians notes that Pod::Perldoc::ToMan breaks when the
	pod2man program isn't in $Config{'scriptdirexp'}.  So I make it
	look there first, but then fall back to not specifying where it
	should be found.

	James Michael Du Pont notes that Carp::croak isn't always loaded
	by all versions of the modules perldoc uses.  So I add an explicit
	"require Carp::croak".

	I add t/01_about_verbose.t just to give more diagnostics.

2003-10-21  Sean M. Burke  sburke@cpan.org
	* Release 3.12 -- tweak for Linux man.
	
	Slaven Rezic notes that Makefile.PL should say INSTALLDIRS => "perl"